Combine templated and IR tests into a single class